# stamps-search

./: .flake8  .gitignore  README.md  colnect.csv  colnect.html  gunicorn.conf.py  main.py  manage.py  pyproject.toml
models/: core.py  models.py
notebooks/: image-search.ipynb  main.py  main_qdrant.ipynb  perspective.ipynb  scraper.ipynb
scripts/: colnect_image_download.py  colnect_image_download_async.py  colnect_scrapper.py  embeddings_create_upload.py  segment_search_annoy.py  segment_search_qdrant.py  segment_search_qdrant_gradio.py
stamps/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
stamps/management/commands/: loadStamps.py  setup.py
stamps/migrations/: 0001_initial.py
stamps_search/: asgi.py  settings.py  urls.py  wsgi.py
