[tool.poetry]
name = "stamps-search"
version = "0.1.0"
description = ""
authors = ["Laxman Desai <lolopaw24@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.24.0"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
torch = "^2.4.1"
transformers = "^4.44.2"
python-dotenv = "^1.0.1"
annoy = "^1.17.3"
numpy = "^2.1.1"
pillow = "^10.4.0"
pi-heif = "^0.18.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
