[tool.poetry]
name = "stamps-search"
version = "0.1.0"
description = ""
authors = ["Laxman Desai <lolopaw24@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.24.0"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"
torch = "^2.4.1"
transformers = "^4.44.2"
python-dotenv = "^1.0.1"
annoy = "^1.17.3"
numpy = "^2.1.1"
pillow = "^10.4.0"
tqdm = "^4.66.5"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
plotly = "^5.24.1"
opencv-python = "^4.10.0.84"
lxml = "^5.3.0"
aiohttp = {extras = ["speedups"], version = "^3.10.8"}
asyncio = "^3.4.3"
aiofiles = "^23.2.1"
qdrant-client = "^1.11.3"
gradio = "^4.44.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
